--- a/Machine_Learning/module.ipynb
+++ b/Machine_Learning/module.ipynb
@@ -520,6 +520,154 @@
     "df = pd.DataFrame({'item':['TV','냉장고','전자렌지','컴퓨터','선풍기','선풍기','믹서','믹서'] })\n",
     "pd.get_dummies(df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 피처 스케일링과 정규화"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature 들의 평균 :\n",
+      "sepal length (cm)    5.843333\n",
+      "sepal width (cm)     3.057333\n",
+      "petal length (cm)    3.758000\n",
+      "petal width (cm)     1.199333\n",
+      "dtype: float64\n",
+      "\n",
+      "feature 들의 분산 :\n",
+      "sepal length (cm)    0.685694\n",
+      "sepal width (cm)     0.189979\n",
+      "petal length (cm)    3.116278\n",
+      "petal width (cm)     0.581006\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "import pandas as pd\n",
+    "# 붓꽃 데이터 셋을 로딩하고 DataFrame으로 변환\n",
+    "iris = load_iris()\n",
+    "iris_data = iris.data\n",
+    "iris_df = pd.DataFrame(data=iris_data, columns=iris.feature_names)\n",
+    "\n",
+    "print('feature 들의 평균 :')\n",
+    "print(iris_df.mean())\n",
+    "print('\\nfeature 들의 분산 :')\n",
+    "print(iris_df.var())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature 들의 평균 :\n",
+      "sepal length (cm)   -1.690315e-15\n",
+      "sepal width (cm)    -1.842970e-15\n",
+      "petal length (cm)   -1.698641e-15\n",
+      "petal width (cm)    -1.409243e-15\n",
+      "dtype: float64\n",
+      "\n",
+      "feature 들의 분산 :\n",
+      "sepal length (cm)    1.006711\n",
+      "sepal width (cm)     1.006711\n",
+      "petal length (cm)    1.006711\n",
+      "petal width (cm)     1.006711\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(iris_df) # df도 가능하다.\n",
+    "iris_scaled = scaler.transform(iris_df)\n",
+    "\n",
+    "iris_df_scaled = pd.DataFrame(data = iris_scaled, columns = iris.feature_names)\n",
+    "\n",
+    "# 0만큼 작게 나온다\n",
+    "print('feature 들의 평균 :')\n",
+    "print(iris_df_scaled.mean())\n",
+    "print('\\nfeature 들의 분산 :')\n",
+    "print(iris_df_scaled.var())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature들의 최소 값\n",
+      "sepal length (cm)    0.0\n",
+      "sepal width (cm)     0.0\n",
+      "petal length (cm)    0.0\n",
+      "petal width (cm)     0.0\n",
+      "dtype: float64\n",
+      "\n",
+      "feature들의 최대 값\n",
+      "sepal length (cm)    1.0\n",
+      "sepal width (cm)     1.0\n",
+      "petal length (cm)    1.0\n",
+      "petal width (cm)     1.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(iris_df)\n",
+    "iris_scaled = scaler.transform(iris_df)\n",
+    "\n",
+    "# transform()시 scale 변환된 데이터 셋이 numpy ndarry로 반환되어 이를 DataFrame으로 변환\n",
+    "iris_df_scaled = pd.DataFrame(data=iris_scaled, columns=iris.feature_names)\n",
+    "print('feature들의 최소 값')\n",
+    "print(iris_df_scaled.min())\n",
+    "print('\\nfeature들의 최대 값')\n",
+    "print(iris_df_scaled.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
